--- a/quodlibet/MANIFEST.in
+++ b/quodlibet/MANIFEST.in
@@ -6,8 +6,7 @@ include po/*.po
 include po/POTFILES.in
 include po/POTFILES.skip
 include man/*.1
-include quodlibet/images/*.png
-include quodlibet/images/*.svg
+include quodlibet/images/README
 recursive-include quodlibet/images/hicolor/ *.cache *.theme *.svg *.png
 include tests/data/*
 include tests/*.py
