--- a/quodlibet/MANIFEST.in
+++ b/quodlibet/MANIFEST.in
@@ -9,6 +9,6 @@ include man/*.1
 include quodlibet/images/README
 recursive-include quodlibet/images/hicolor/ *.cache *.theme *.svg *.png
 include tests/data/*
-include tests/*.py
+recursive-include tests *.py
 include gdist/*.py
 include *.desktop.in
