Enable startup notification.
This enables the cursor change while the programm is loading until the first window is shown.

--- a/quodlibet/exfalso.desktop.in
+++ b/quodlibet/exfalso.desktop.in
@@ -4,6 +4,7 @@ _GenericName=Audio tag editor
 _Comment=Edit tags in your audio files
 Exec=exfalso
 Terminal=false
+StartupNotify=true
 Type=Application
 Icon=exfalso
 Categories=AudioVideo;Audio;GTK;
