operon man page

--- a/quodlibet/man/Makefile
+++ b/quodlibet/man/Makefile
@@ -1,7 +1,10 @@
-all: exfalso.1 quodlibet.1
+all: exfalso.1 quodlibet.1 operon.1
 
 exfalso.1: exfalso.rst
 	rst2man exfalso.rst > exfalso.1
 
 quodlibet.1: quodlibet.rst
 	rst2man quodlibet.rst > quodlibet.1
+
+operon.1: operon.rst
+	rst2man operon.rst > operon.1
