--- a/quodlibet/po/POTFILES.in
+++ b/quodlibet/po/POTFILES.in
@@ -34,6 +34,7 @@ quodlibet/qltk/browser.py
 quodlibet/qltk/cbes.py
 quodlibet/qltk/chooser.py
 quodlibet/qltk/controls.py
+quodlibet/qltk/data_editors.py
 quodlibet/qltk/debugwindow.py
 quodlibet/qltk/delete.py
 quodlibet/qltk/downloader.py
@@ -45,6 +46,7 @@ quodlibet/qltk/info.py
 quodlibet/qltk/information.py
 quodlibet/qltk/logging.py
 quodlibet/qltk/lyrics.py
+quodlibet/qltk/maskedbox.py
 quodlibet/qltk/msg.py
 quodlibet/qltk/notif.py
 quodlibet/qltk/playorder.py
