--- a/quodlibet/po/POTFILES.in
+++ b/quodlibet/po/POTFILES.in
@@ -79,4 +79,5 @@ quodlibet/util/library.py
 quodlibet/util/logging.py
 quodlibet/util/massagers.py
 quodlibet/util/songwrapper.py
+quodlibet/util/string/__init__.py
 quodlibet/util/tags.py
