--- a/quodlibet/MANIFEST.in
+++ b/quodlibet/MANIFEST.in
@@ -13,5 +13,6 @@ recursive-include tests *.py
 include gdist/*.py
 include data/*.desktop.in
 include data/*.ini
+include data/*.service.in
 include MANIFEST.in
 recursive-include docs conf.py Makefile *.rst *.png
