setup.py build_sphinx. Closes issue 1204.

--- a/quodlibet/docs/Makefile
+++ b/quodlibet/docs/Makefile
@@ -1,7 +1,10 @@
 all:
-	sphinx-build -n . _build
+	sphinx-build -b html -n . _build_all
+
+guide:
+	sphinx-build -b html -c . -n guide _build_guide
 
 clean:
-	rm -rf _build
+	rm -rf _build_all _build_guide
 
-.PHONY: clean
+.PHONY: clean all guide
