Support appdata spec (http://people.freedesktop.org/~hughsient/appdata/)

--- a/quodlibet/po/POTFILES.in
+++ b/quodlibet/po/POTFILES.in
@@ -1,4 +1,6 @@
+data/exfalso.appdata.xml.in
 data/exfalso.desktop.in
+data/quodlibet.appdata.xml.in
 data/quodlibet.desktop.in
 exfalso.py
 operon.py
