unity: use the gi API for the launcher quick list.

--- a/quodlibet/po/POTFILES.in
+++ b/quodlibet/po/POTFILES.in
@@ -73,6 +73,7 @@ quodlibet/qltk/tagsfrompath.py
 quodlibet/qltk/textedit.py
 quodlibet/qltk/tracker.py
 quodlibet/qltk/tracknumbers.py
+quodlibet/qltk/unity.py
 quodlibet/qltk/views.py
 quodlibet/qltk/wlw.py
 quodlibet/qltk/x.py
