--- a/quodlibet/MANIFEST.in
+++ b/quodlibet/MANIFEST.in
@@ -5,7 +5,6 @@ include README
 include po/*.po
 include po/POTFILES.in
 include po/POTFILES.skip
-include man/*
 include quodlibet/images/README
 recursive-include quodlibet/images/hicolor/ *.cache *.theme *.svg *.png
 include tests/data/*
@@ -15,5 +14,6 @@ include data/*.desktop.in
 include data/*.ini
 include data/*.service.in
 include data/*.appdata.xml.in
+include data/*.1
 include MANIFEST.in
 recursive-include docs conf.py Makefile *.rst *.png
