Update .hgignore (win installer exes, new coverage report)

--- a/.hgignore
+++ b/.hgignore
@@ -33,3 +33,7 @@ build/*
 # Windows Installer
 win_installer/_bin
 win_installer/_build_env
+win_installer/*.exe
+
+# coverage.py html report
+coverage/*
