--- a/quodlibet/po/POTFILES.in
+++ b/quodlibet/po/POTFILES.in
@@ -19,6 +19,7 @@ quodlibet/browsers/paned/models.py
 quodlibet/browsers/paned/prefs.py
 quodlibet/browsers/playlists/main.py
 quodlibet/browsers/playlists/util.py
+quodlibet/browsers/playlists/menu.py
 quodlibet/browsers/search.py
 quodlibet/devices/_base.py
 quodlibet/devices/__init__.py
