Fix MANIFEST.in; add test. Closes issue 1388.

--- a/quodlibet/MANIFEST.in
+++ b/quodlibet/MANIFEST.in
@@ -6,7 +6,7 @@ include po/*.po
 include po/POTFILES.in
 include po/POTFILES.skip
 include quodlibet/images/README
-recursive-include quodlibet/images/hicolor/ *.cache *.theme *.svg *.png
+recursive-include quodlibet/images/hicolor/ *.theme *.svg *.png
 include tests/data/*
 recursive-include tests *.py
 include gdist/*.py
@@ -17,3 +17,5 @@ include data/*.appdata.xml.in
 include data/*.1
 include MANIFEST.in
 recursive-include docs conf.py Makefile *.rst *.png
+prune docs/_build_guide
+prune docs/_build_all
