--- a/quodlibet/data/quodlibet.appdata.xml.in
+++ b/quodlibet/data/quodlibet.appdata.xml.in
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <application>
     <id type="desktop">quodlibet.desktop</id>
-    <licence>CC0</licence>
+    <metadata_license>CC0</metadata_license>
+    <project_license>GPL-2.0</project_license>
     <description>
     <_p>
         Quod Libet is a music management program. It provides several
