Move plugins into the core. Closes 1396.

--- a/quodlibet/po/POTFILES.in
+++ b/quodlibet/po/POTFILES.in
@@ -25,6 +25,76 @@ quodlibet/devices/_base.py
 quodlibet/devices/__init__.py
 quodlibet/devices/ipod.py
 quodlibet/devices/storage.py
+quodlibet/ext/covers/lastfm.py
+quodlibet/ext/covers/musicbrainz.py
+quodlibet/ext/editing/iconv.py
+quodlibet/ext/editing/kakasi.py
+quodlibet/ext/editing/resub.py
+quodlibet/ext/editing/titlecase.py
+quodlibet/ext/events/animosd.py
+quodlibet/ext/events/auto_library_update.py
+quodlibet/ext/events/automask.py
+quodlibet/ext/events/autorating.py
+quodlibet/ext/events/clock.py
+quodlibet/ext/events/equalizer.py
+quodlibet/ext/events/gajim_status.py
+quodlibet/ext/events/inhibit.py
+quodlibet/ext/events/iradiolog.py
+quodlibet/ext/events/mediaserver.py
+quodlibet/ext/events/mpdserver/__init__.py
+quodlibet/ext/events/mpris.py
+quodlibet/ext/events/notify.py
+quodlibet/ext/events/osxmmkey.py
+quodlibet/ext/events/qlscrobbler.py
+quodlibet/ext/events/radioadmute.py
+quodlibet/ext/events/randomalbum.py
+quodlibet/ext/events/screensaver.py
+quodlibet/ext/events/searchprovider.py
+quodlibet/ext/events/squeezebox.py
+quodlibet/ext/events/telepathy_status.py
+quodlibet/ext/events/themeswitcher.py
+quodlibet/ext/events/trayicon.py
+quodlibet/ext/events/viewlyrics.py
+quodlibet/ext/events/write_cover.py
+quodlibet/ext/events/zeitgeist_client.py
+quodlibet/ext/gstreamer/compressor.py
+quodlibet/ext/gstreamer/crossfeed.py
+quodlibet/ext/gstreamer/karaoke.py
+quodlibet/ext/gstreamer/mono.py
+quodlibet/ext/gstreamer/pitch.py
+quodlibet/ext/playlist/remove_duplicates.py
+quodlibet/ext/playlist/shuffle.py
+quodlibet/ext/playorder/follow.py
+quodlibet/ext/playorder/queue.py
+quodlibet/ext/playorder/reverse.py
+quodlibet/ext/playorder/track_repeat.py
+quodlibet/ext/songsmenu/albumart.py
+quodlibet/ext/songsmenu/ape2id3.py
+quodlibet/ext/songsmenu/bookmarks.py
+quodlibet/ext/songsmenu/browsefolders.py
+quodlibet/ext/songsmenu/cddb.py
+quodlibet/ext/songsmenu/clearerrors.py
+quodlibet/ext/songsmenu/console.py
+quodlibet/ext/songsmenu/custom_commands.py
+quodlibet/ext/songsmenu/duplicates.py
+quodlibet/ext/songsmenu/embedded.py
+quodlibet/ext/songsmenu/filterall.py
+quodlibet/ext/songsmenu/filterbrowser.py
+quodlibet/ext/songsmenu/fingerprint.py
+quodlibet/ext/songsmenu/forcewrite.py
+quodlibet/ext/songsmenu/html.py
+quodlibet/ext/songsmenu/ifp.py
+quodlibet/ext/songsmenu/importexport.py
+quodlibet/ext/songsmenu/k3b.py
+quodlibet/ext/songsmenu/lastfmsync.py
+quodlibet/ext/songsmenu/makesorttags.py
+quodlibet/ext/songsmenu/openwith.py
+quodlibet/ext/songsmenu/playlist.py
+quodlibet/ext/songsmenu/refresh.py
+quodlibet/ext/songsmenu/replaygain.py
+quodlibet/ext/songsmenu/splitting.py
+quodlibet/ext/songsmenu/website_search.py
+quodlibet/ext/songsmenu/wikipedia.py
 quodlibet/formats/_audio.py
 quodlibet/formats/__init__.py
 quodlibet/__init__.py
