new plugin: acoustid fingerprint tagging
Just a basic UI; It will try to reduce the amount of different releases for all selected songs which works well if whole albums are selected.

--- a/quodlibet/po/POTFILES.in
+++ b/quodlibet/po/POTFILES.in
@@ -81,6 +81,7 @@ quodlibet/ext/songsmenu/embedded.py
 quodlibet/ext/songsmenu/filterall.py
 quodlibet/ext/songsmenu/filterbrowser.py
 quodlibet/ext/songsmenu/fingerprint/__init__.py
+quodlibet/ext/songsmenu/fingerprint/search.py
 quodlibet/ext/songsmenu/fingerprint/submit.py
 quodlibet/ext/songsmenu/forcewrite.py
 quodlibet/ext/songsmenu/html.py
